Refactor index.html layout and styles; remove unused files and add README

--- a/screens-cardapp/TelaInicial/index.html
+++ b/screens-cardapp/TelaInicial/index.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>CardApp</title>
-  </head>
-  <body>
-    <h1>teste</h1>
-    <p class="texto1">CARDÁPIO DIGITAL E CONTROLE TOTAL DO SEU NEGÓCIO</p>
+<html lang="en">
 
-    <p class="texto2">
-      CADASTRE-SE GRATUITAMENTE E OFEREÇA UMA BOA EXPERIÊNCIA AOS SEUS CLIENTES
-    </p>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
 
-    <p class="texto3"></p>
+<body>
 
-    <a href="" class="cadastrese">Cadastre-se</a>
-  </body>
+    <div class="maiorDiv">
+        <div class="col1"></div>
+        <div class="col2">
+            <p class="p1">ÍNICIO</p>
+
+            <button>ENTRAR</button>
+            <button>CADASTRAR</button>
+        </div>
+    </div>
+
+
+
+</body>
+
 </html>
