add nova tela inicial & tela de cadastro

--- a/screens-cardapp/TelaInicial/index.html
+++ b/screens-cardapp/TelaInicial/index.html
@@ -11,12 +11,16 @@
 <body>
 
     <div class="maiorDiv">
-        <div class="col1"></div>
+        <div class="col1">
+            <img src="../imagens/logo.png" />
+        </div>
         <div class="col2">
             <p class="p1">ÍNICIO</p>
 
-            <button>ENTRAR</button>
-            <button>CADASTRAR</button>
+            <a target="_blank" href="../TelaCadasatro/index.html"><button>ENTRAR</button></a>
+            <a target="_blank" href="https://www.google.com/"><button>CADASTRAR</button></a>
+        
+            <p id="p2">Crie seu site</p>
         </div>
     </div>
 
