add telahomepage = layout

--- a/screens-cardapp/TelaInicial/index.html
+++ b/screens-cardapp/TelaInicial/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -17,9 +17,9 @@
         <div class="col2">
             <p class="p1">ÍNICIO</p>
 
-            <a target="_blank" href="../TelaCadasatro/index.html"><button>ENTRAR</button></a>
-            <a target="_blank" href="https://www.google.com/"><button>CADASTRAR</button></a>
-        
+            <a target="_blank" href="../TelaHomePage/index.html"><button>ENTRAR</button></a>
+            <a target="_blank" href="../TelaCadasatro/index.html"><button>CADASTRAR</button></a>
+
             <p id="p2">Crie seu site</p>
         </div>
     </div>
