--- a/screens-cardapp/TelaCadasatro/index.html
+++ b/screens-cardapp/TelaCadasatro/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -11,7 +11,7 @@
 <body>
     <img src="../imagens/logo.png" />
 
-    <form target="_blank" action="https://www.google.com.br/" style="text-align: center; margin-top: 300px;">
+    <form target="_blank" action="../TelaHomePage/index.html" style="text-align: center; margin-top: 300px;">
         <input type="text" placeholder="CNPJ" required />
         <br>
         <input style="margin-top: 40px;" type="password" placeholder="Senha" required />
