Update titles and styles for Tela Cadastro and Tela Inicial

--- a/screens-cardapp/TelaInicial/index.html
+++ b/screens-cardapp/TelaInicial/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cardapp - TelaInicial</title>
     <link rel="stylesheet" href="style.css" />
 </head>
 
@@ -12,7 +12,7 @@
 
     <div class="maiorDiv">
         <div class="col1">
-            <img src="../imagens/logo.png" />
+            <img style="margin: 10px;" src="../imagens/logo.png" />
         </div>
         <div class="col2">
             <p class="p1">ÍNICIO</p>
