Add new logo image for the card application

--- a/screens-cardapp/TelaCadasatro/index.html
+++ b/screens-cardapp/TelaCadasatro/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <img src="../imagens/logo.png" />
+    <img src="../imagens/logotipo.png" />
 
     <form target="_blank" action="../TelaHomePage/index.html" style="text-align: center; margin-top: 300px;">
         <input type="text" placeholder="CNPJ" required />
