--- a/screens-cardapp/TelaInicial/index.html
+++ b/screens-cardapp/TelaInicial/index.html
@@ -7,12 +7,10 @@
     <title>Cardapp - TelaInicial</title>
     <link rel="stylesheet" href="style.css" />
 </head>
-
 <body>
-
     <div class="maiorDiv">
         <div class="col1">
-            <img style="margin: 10px;" src="../imagens/logo.png" />
+            <img style="margin: 5px;" src="../imagens/logotipo.png" />
         </div>
         <div class="col2">
             <p class="p1">ÍNICIO</p>
@@ -23,9 +21,6 @@
             <p id="p2">Crie seu site</p>
         </div>
     </div>
-
-
-
 </body>
 
 </html>
