--- a/screens-cardapp/TelaHomePage/index.html
+++ b/screens-cardapp/TelaHomePage/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="divLogo">
-            <img class="logo" src="../imagens/cardapp-logo.png" />
+            <img class="logo" src="../imagens/cardapp-logo-nome.png" alt="cardapp-logo-nome"/>
         </div>
     </header>
 
@@ -26,7 +26,7 @@
 
     <div id="sidebar" class="sidebar">
         <div class="sidebar-content">
-            <img src="../imagens/logo.png" alt="logo" />
+            <img src="../imagens/logotipo2.png" alt="logo" />
 
             <div class="sidebar-list">
                 <a href="#">FINANCEIRO</a>
