--- a/screens-cardapp/TelaHomePage/index.html
+++ b/screens-cardapp/TelaHomePage/index.html
@@ -14,7 +14,7 @@
             <img class="logo" src="../imagens/cardapp-logo-nome.png" alt="cardapp-logo-nome"/>
         </div>
     
-
+        <!--
         <div class="navbar">
             <ul>
                 <li id="user-male"><img src="../imagens/user-male.png" alt="user-male"></li>
@@ -23,6 +23,14 @@
                 <li><a>CARRINHO &gt;</a></li>
             </ul>
         </div>
+    -->
+    <div class="new-navbar">
+        <a href="">LOJA</a>
+        <a href="">PRATOS</a>
+        <a href="">FINANCEIRO</a>
+        <a href="">PERFIL</a>
+    </div>
+
     </header>
 
     <div id="sidebar" class="sidebar">
@@ -52,10 +60,10 @@
         </div>
 
         <div class="container-localizacao">
-            <h1 class="texto-acima-localizacao">Localização: </h1>
+            <div class="texto-acima-localizacao">Localização: </div>
             
             <!--COLOCAR VARIÁVEL DE LOCALIZAÇÃO-->
-            <h1 class="localizacao">Av. Beira Mar 666</h1>
+            <div class="localizacao"><p>Av. Beira Mar 666</p></div>
         </div>
     </main>
     <script src="sidebar.js"></script>
