desenvolvimento da telaPratos

--- a/screens-cardapp/TelaHomePage/index.html
+++ b/screens-cardapp/TelaHomePage/index.html
@@ -8,6 +8,10 @@
     <link rel="stylesheet" href="style_main.css" />
     <link rel="stylesheet" href="style_pratos_sugeridos.css" />
     <link rel="stylesheet" href="style_header.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
@@ -28,7 +32,7 @@
     -->
         <div class="new-navbar">
             <a href="">LOJA</a>
-            <a href="">PRATOS</a>
+            <a href="../TelaPratos/index.html">PRATOS</a>
             <a href="">FINANCEIRO</a>
             <a href="">PERFIL</a>
         </div>
@@ -49,7 +53,7 @@
         </div>
     </div>
     -->
-    
+
 
     <main>
         <!-- COLOCAR VARIAVEL PARA NOME DO RESTAURANTE-->
@@ -57,11 +61,10 @@
         <div class="container">
             <div class="container-info">
                 <h1>NOME DO RESTAURANTE</h1>
-                <h1>NOME DO DONO: carlinhos</h1>
                 <h1>EMAIL DO DONO: dono@gmail.com</h1>
-                <h1>LOCALIZAÇÃO: Av. Beira Mar 666</h1>
                 <h1>CNPJ : 1029-123</h1>
                 <h1>CPF: 666.666.666-66</h1>
+                <h1>LOCALIZAÇÃO: Av. Beira Mar 666</h1>
                 <h1>TELEFONE CELULAR: 9666-6666 </h1>
             </div>
         </div>
