--- a/screens-cardapp/TelaPratos/index.html
+++ b/screens-cardapp/TelaPratos/index.html
@@ -45,41 +45,41 @@
                 <!--COLOCAR NOME DA SEÇÃO-->
                 Seção sem nome
                 <button class="open-modal" data-modal="modal-3"><i class="fa-solid fa-pencil"></i></button>
-                <button class="open-modal" data-modal="modal-2"><i class="fa-solid fa-trash-can""></i></button>
+                <button class="open-modal" data-modal="modal-2"><i class="fa-solid fa-trash-can"></i></button>
             </span>
         </div>
         <div class=" container-secao-pratos">
-                        <div class="container-prato">
-                            <div class="prato-imagem"></div>
-                            <p>nome do prato</p>
-                        </div>
-                        <div class="container-prato">
-                            <div class="prato-imagem"></div>
-                            <p>cuscuz com ovo e queijo e rabanada e arroz e feijao e whey de banana da growth</p>
-                        </div>
-                        <div class="container-prato">
-                            <div class="prato-imagem"></div>
-                            <p>nome do prato</p>
-                        </div>
-                        <div class="container-prato">
-                            <div class="prato-imagem"></div>
-                            <p>nome do prato</p>
-                        </div>
-                        <div class="container-prato">
-                            <div class="prato-imagem"></div>
-                            <p>nome do prato</p>
-                        </div>
-                        <div class="container-prato">
-                            <div class="prato-imagem"></div>
-                            <p>nome do prato</p>
-                        </div>
+            <div class="container-prato">
+                <div class="prato-imagem"></div>
+                <p>nome do prato</p>
+            </div>
+            <div class="container-prato">
+                <div class="prato-imagem"></div>
+                <p>cuscuz com ovo e queijo e rabanada e arroz e feijao e whey de banana da growth</p>
+            </div>
+            <div class="container-prato">
+                <div class="prato-imagem"></div>
+                <p>nome do prato</p>
+            </div>
+            <div class="container-prato">
+                <div class="prato-imagem"></div>
+                <p>nome do prato</p>
+            </div>
+            <div class="container-prato">
+                <div class="prato-imagem"></div>
+                <p>nome do prato</p>
+            </div>
+            <div class="container-prato">
+                <div class="prato-imagem"></div>
+                <p>nome do prato</p>
+            </div>
 
-                        <button class="open-modal" data-modal="modal-4">
-                            <div class="adicionar-prato">
-                                <i class="fa-solid fa-circle-plus"></i>
-                                <span>Adicionar novo item</span>
-                            </div>
-                        </button>
+            <button class="open-modal" data-modal="modal-4">
+                <div class="adicionar-prato">
+                    <i class="fa-solid fa-circle-plus"></i>
+                    <span>Adicionar novo item</span>
+                </div>
+            </button>
         </div>
     </div>
 
